# CSSwitch-Linux

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.en.md  README.md  csswitch.desktop
.github/ISSUE_TEMPLATE/: config.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/csswitch-config/: Cargo.toml
crates/csswitch-config/src/: lib.rs
crates/csswitch-oauth/: Cargo.toml
crates/csswitch-oauth/src/: lib.rs
crates/csswitch-runtime/: Cargo.toml
crates/csswitch-runtime/src/: lib.rs  operation.rs  provider.rs  proxy.rs  proxy_lifecycle.rs  science.rs  settings.rs  system.rs
crates/csswitch-templates/: Cargo.toml
crates/csswitch-templates/src/: lib.rs
desktop/: README.md  package-lock.json  package.json
desktop/gateway/: Cargo.toml
desktop/gateway/src/: messages.rs  server.rs
desktop/src/: index.html  main.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  lifecycle.rs  proc.rs  tray.rs
desktop/src-tauri/src/commands/: runtime.rs
desktop/src-tauri/src/runtime/: diagnostics.rs  sandbox_session.rs
desktop/src-tauri/src/skill_manager/: mod.rs  store.rs  workspace_ingress.rs
docs/: provider-capability-matrix.md  upgrade-and-rollback.md
docs/superpowers/plans/: 2026-07-09-s1c-migration-map.md
findings/: 2026-07-09-s1b-packaged-app-smoke.md
scripts/: build-deb-desktop.sh  build-deb.sh  csswitch-maintenance.service  csswitch-maintenance.timer  daily-maintenance.prompt.md  daily-maintenance.sh  doctor.sh  install-maintenance-systemd.sh  install-maintenance.sh  launch-science-sandbox.sh  launch-virtual-sandbox.sh  stop-science-sandbox.sh
test/: real_machine_guard.sh  test_gateway_rust.py
