[package]
name = "csswitch-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
csswitch-config = { path = "../csswitch-config" }
csswitch-templates = { path = "../csswitch-templates" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "native-tls"] }
dirs = "6"
