[package]
name = "csswitch-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
csswitch-config = { path = "../csswitch-config" }
csswitch-templates = { path = "../csswitch-templates" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
