[package]
name = "csswitch-gateway"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "csswitch-gateway"
path = "src/main.rs"

[lib]
name = "csswitch_gateway"
path = "src/lib.rs"

[dependencies]
getrandom = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "native-tls"] }
regex = "1"
serde_json = { version = "1", features = ["preserve_order"] }
